--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                </div>
                <div class="col span-1-of-2 desc">
                    <p align="justify">
-                       Hello all! I am Naman Rastogi, currently an undergraduate in Computer Science and Engineering, from Madan Mohan Malaviya University of Technology, Gorakhpur. I am about to complete my fourth semester of the University. I am very much passionate, ambitious and enthusiastic about learning and exploring different dimensions of computer science particularly Artificial Intelligence to its greatest extent. I have always been eager to do something innovative regarding machine learning, deep learning and therefore AI. I also have a great interest in competitive programming which helps me build my problem solving skills. Currently i am learning Data Science, Machine Learning, Javascript, diving into backend Tecnologies like NodeJs, Version Control System(Git),etc.   
+                       Hello all! I am Naman Rastogi, currently an undergraduate in Computer Science and Engineering, from Madan Mohan Malaviya University of Technology, Gorakhpur. I am done with my fourth semester of the University.I am very much passionate and ambitious about learning and exploring Artificial Intelligence to its greatest extent. I have always been eager to do something innovative regarding machine learning, deep learning and therefore AI, and I think that everything in the world of Machine Learning is dependent on how innovatively one can find patterns in mathematics, and so i am trying to be able to do so, to come up with some useful innovations exploiting the beauty of machine learning. I also have a profound interest in competitive programming which helps me build my problem solving skills,and at the same time it helps me get for fluent in Data Structures and Algorithms which is fundamental to every dimension of computer science and has a huge usecase in Machine Learning as well. Currently i am learning Data Science, Machine Learning, Deep Learning, Javascript, Version Control System(Git),etc. 
+                       More details about me could be found in the resume attached at the end of the page.
                    </p>
                </div>
            </div>
@@ -85,7 +86,7 @@
                    <div class="skill-tile-col">Machine Learning</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">Programming</div>
+                   <div class="skill-tile-col">Deep Learning</div>
                </div>
            </div>
            <div class="row">
@@ -96,42 +97,46 @@
                    <div class="skill-tile-col">Algorithms</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">Data Visualization</div>
+                   <div class="skill-tile-col">Data Science</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">Data Analysis</div>
+                   <div class="skill-tile-col">Artificial Neural Networks</div>
                </div>
                
            </div>
            <div class="row">
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">HTML5</div>
+                   <div class="skill-tile-col">Convolutional Neural Networks</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">CSS3</div>
+                   <div class="skill-tile-col">Recurrent Neural Networks</div>
                </div>
+               <div class="col span-1-of-4 skill-tile">
+                   <div class="skill-tile-col">HTML</div>
+               </div>
+               <div class="col span-1-of-4 skill-tile">
+                   <div class="skill-tile-col">CSS</div>
+               </div>
+           </div>
+           <div class="row">
                <div class="col span-1-of-4 skill-tile">
                    <div class="skill-tile-col">Javascript</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">Github</div>
+                   <div class="skill-tile-col">GitHub</div>
                </div>
-           </div>
-           <div class="row">
                <div class="col span-1-of-4 skill-tile">
                    <div class="skill-tile-col">Git</div>
                </div>
                <div class="col span-1-of-4 skill-tile">
                    <div class="skill-tile-col">C</div>
                </div>
+               
+           </div>
+           <div class="row row-s-last">
                <div class="col span-1-of-4 skill-tile">
                    <div class="skill-tile-col">SQL</div>
                </div>
-               <div class="col span-1-of-4 skill-tile">
-                   <div class="skill-tile-col">IBM DB2</div>
-               </div>
-           </div>
-           <div class="row row-s-last">
                <div class="col span-1-of-4 skill-tile">
                    <div class="skill-tile-col">IBM Watson</div>
                </div>
@@ -147,9 +152,33 @@
                 <h2>Certifications</h2>
             </div>
             <div class="row certi-row">
-                 <div class="col span-1-of-4 certi">
-                    <a href="resources/img/ml.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/PZFSJWANW8PD" class="tooltip" title="Machine Learning"><img src="resources/img/ml.PNG" alt="machine learning"></a>
+                <div class="col span-1-of-4 certi">
+                    <a href="resources/img/dls.PNG" data-source="https://www.coursera.org/account/accomplishments/specialization/certificate/6NRPMLUMR55Q" class="tooltip" title="Deep Learning Specialization"><img src="resources/img/dls.PNG" alt="deep learning specialization"></a>
                 </div>
+                <div class="col span-1-of-4 certi">
+                    <a href="resources/img/nndl.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/UGWPU3E6L84G" class="tooltip" title="Neural Networks and Deep Learning"><img src="resources/img/nndl.PNG" alt="Neural Networks and Deep Learning"></a>
+                </div>
+            </div>
+             <div class="row certi-row">
+                 <div class="col span-1-of-4 certi">
+                    <a href="resources/img/idnn.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/GZU4KV8R8YBN" class="tooltip" title="Improving Deep Neural Networks"><img src="resources/img/idnn.PNG" alt="improving deep neural networks"></a>
+                </div>
+                 <div class="col span-1-of-4 certi">
+                    <a href="resources/img/smlp.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/RLGWJ388ZQLK" class="tooltip" title="Structuring Machine Learning Projects"><img src="resources/img/smlp.PNG" alt="sttructuring machine learning projects"></a>
+                </div>
+                 <div class="col span-1-of-4 certi">
+                    <a href="resources/img/cnn.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/F59A3ENGUZ9L" class="tooltip" title="Convolutional Neural Networks"><img src="resources/img/cnn.PNG" alt="CNN"></a>
+                </div>
+                 <div class="col span-1-of-4 certi">
+                    <a href="resources/img/sqm.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/UGWPU3E6L84G" class="tooltip" title="Sequence Models"><img src="resources/img/sqm.PNG" alt="sequence models"></a>
+                </div>
+            </div>
+            <div class="row certi-row">
+               <div class="col span-1-of-4 certi">
+                    <a href="resources/img/IBMPC.PNG" data-source="https://www.coursera.org/account/accomplishments/specialization/certificate/LQP3FXB48PE6" class="tooltip" title="IBM Data Science Specialization"><img src="resources/img/IBMPC.PNG" alt="IBM data science"></a>
+                </div> 
+            </div>
+            <div class="row certi-row">
                 <div class="col span-1-of-4 certi">
                     <a href="resources/img/wids.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/A5YAEFC4MSEB" class="tooltip" title="What Is Data Science"><img src="resources/img/wids.PNG" alt="what is data science"></a>
                 </div>
@@ -159,11 +188,11 @@
                  <div class="col span-1-of-4 certi">
                     <a href="resources/img/dsm.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/7YPBZ8SUZQ7L" class="tooltip" title="Data Science Methodology"><img src="resources/img/dsm.PNG" alt="data science methodology"></a>
                 </div>
-            </div>
-            <div class="row certi-row">
                 <div class="col span-1-of-4 certi">
                     <a href="resources/img/pfdai.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/CSWCKDTSUHWH" class="tooltip" title="Python For Data Science And AI"><img src="resources/img/pfdai.PNG" alt="python for data science and ai"></a>
                 </div>
+            </div>
+            <div class="row certi-row">
                  <div class="col span-1-of-4 certi">
                     <a href="resources/img/sql.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/29BEYKDHE9H8" class="tooltip" title="Databases And SQL"><img src="resources/img/sql.PNG" alt="databases and sql"></a>
                 </div>
@@ -173,20 +202,14 @@
                  <div class="col span-1-of-4 certi">
                     <a href="resources/img/dvwp.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/XJU8325MSDN4" class="tooltip" title="Data Visualization With Python"><img src="resources/img/dvwp.PNG" alt="data visualization with python"></a>
                 </div>
+                <div class="col span-1-of-4 certi">
+                    <a href="resources/img/MLP.PNG" data-source="https://www.coursera.org/account/accomplishments/certificate/3A7CBA5HGP8V" class="tooltip" title="Machine Learning with Python"><img src="resources/img/MLP.PNG" alt="machine learning with python"></a>
+                </div>
             </div>
             <div class="row certi-row">
-                 <div class="col span-1-of-4 certi">
-                    <a href="resources/img/html.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/XFUCHPERLHCK" class="tooltip" title="HTML5"><img src="resources/img/html.PNG" alt="html5"></a>
-                </div>
-                 <div class="col span-1-of-4 certi">
-                    <a href="resources/img/css.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/E6E564GSLXTG" class="tooltip" title="CSS3"><img src="resources/img/css.PNG" alt="css3"></a>
-                </div>
-                 <div class="col span-1-of-4 certi">
-                    <a href="resources/img/js.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/UL9SQY6D86GP" class="tooltip" title="Javascript"><img src="resources/img/js.PNG" alt="javascript"></a>
-                </div>
-                 <div class="col span-1-of-4 certi">
-                    <a href="resources/img/responsive.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/AUR88DL2H3CK" class="tooltip" title="Responsive Web Design"><img src="resources/img/responsive.PNG" alt="responsive web design"></a>
-                </div>
+                <div class="col span-1-of-4 certi">
+                    <a href="resources/img/ml.PNG" data-source="https://www.coursera.org/account/accomplishments/verify/PZFSJWANW8PD" class="tooltip" title="Machine Learning"><img src="resources/img/ml.PNG" alt="machine learning"></a>
+                </div> 
             </div>
             <div class="row certi-row">
                 <div class="col span-1-of-4 certi">
@@ -201,7 +224,7 @@
           </div>  
           <div class="row">
               <div>
-                  <h3 style="text-align: center;color: #fff">would be added soon...</h3>
+                  <h3 style="text-align: center;color: #fff">Visit my github page...<br>I will be adding the attachments here also soon.</h3>
               </div>
           </div>
         </section>   
@@ -220,10 +243,6 @@
                          <li class="date" data-date="July 2019 - Present">
                             <h3>Scientific and Technical Research Association</h3>
                             <p>Member</p>
-                        </li>
-                        <li class="date" data-date="July 2019 - January 2020">
-                            <h3>E-Cell, IIT Bombay</h3>
-                            <p>Campus Ambassador</p>
                         </li>
                     </ul>
                 </div>
