--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                        </p>
                </div>
                 <div class="row download">
-                        <a href="resources/data/resume.pdf" download="resume-namanrastogi">Download Resume</a>
+                        <a href="resources/data/Naman_Rastogi_Resume.pdf" download="resume-namanrastogi">Download Resume</a>
                 </div>
         </footer>
              
