--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </div>
                 <div class="row">
                        <p>
-                           copyright &copy; Naman Ratogi 2020
+                           copyright &copy; Naman Rastogi 2020
                        </p>
                </div>
                 <div class="row download">
