--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                </div>
                 <div class="row download">
                         <a href="resources/data/Naman_Rastogi_Resume.pdf" download="resume-namanrastogi">Download Resume</a>
-                        <!--<embed src="resources/data/Naman_Rastogi_Resume.pdf" type="application/pdf" width="500px" height="700px">-->
+                        <a href="resources/data/Naman_Rastogi_Resume.pdf" target="_blank"><p>View Resume</p></a>
                 </div>
         </footer>
              
